[project]
name = "amazon-nova-incident-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.34",
  "fastapi>=0.110",
  "uvicorn>=0.29",
  "pydantic>=2.0",
  "numpy>=1.26",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "ruff>=0.3",
  "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
