[project]
name = "amazon-nova-incident-agent"
version = "0.2.0"
description = "AI-powered DevOps incident response agent using Amazon Nova on Bedrock with agentic tool-use loop"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.34",
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "pydantic>=2.0",
    "numpy>=1.26",
    "aiofiles>=23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.3",
    "httpx>=0.27",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
